--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formidable": "^3.5.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "pnpm": "^10.18.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
